# Philosopher ?
### Build: ?

### Added
### Changed
### Fixed


# Philosopher 20190417
### Build: 201904171251

### Added
### Changed
- Updated Dockerfile

### Fixed
- Updated PTMProphet for Windows, version 5.2.0.


# Philosopher 20190405
### Build: 201904051526

### Added
- Support for UniProt UniRef databases

### Changed
- The Decoys tags are automatically acquired from the database command, not necessary anymore for the Filter and PeptideProphet.
- Reverted to 1.11.6 due to deadlock bug.


# Philosopher 20190322
### Build: 201903221254

### Changed
- MSconvert was temporarily disabled after a scary bug that ended up removing the user home folder!
- Delta mass amplitude increased to 1000.

# Philosopher 20190319
### Build: 201903191601

### Added

### Changed
- Prophets updated to 5.2.0
- Comet updated to 2018014

### Fixed
- Freequant error when reading files was corrected.


# Philosopher 20190313
### Build: 201903131612

### Changed
- Go version updated to 1.12

### Fixed
- A problem with the label-free quantification was introduced in the last version and fixed.
- Minor bugs and typos


# Philosopher 20190301
### Build: 201903011453

### Added
- Workspace flag for not checking if there is a new version available.

### Changed
- Modifications in the output tables are now sorted.

### Fixed
- Decoys were not being printed on the output as requested.
- Reprint tables some times had the second line in a wrong order.
- Some output tables were missing protein IDS and other features when not using the razor flag.


# Philosopher 20190226
### Build: 201902261041

### Added
- Started adding unit tests and continuous integration


# Philosopher 20190225
### Build: 201902251308

### Fixed
- Slack integration was updated.


# Philosopher 20190219
### Build: 201902191458

### Fixed
- Fixed dependency for windows terminals


# Philosopher 20190218
### Build: 201902181338

### Added